# Stable-fast-2D

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt  sf2d.hpp
engine/core/: Logger.cpp  Logger.hpp  config.hpp  include.hpp  keys.hpp  logging.hpp  status.cpp  status.hpp  utils.cpp  utils.hpp
engine/core/api/: Input.cpp  Input.hpp  Random.cpp  Random.hpp
engine/core/api/Application/: Application.cpp  Application.hpp  Layer.cpp  Layer.hpp  Layer.inl
engine/core/api/ECS/: ComponentPool.hpp  ComponentRegistry.hpp  Entity.hpp  Scene.cpp  Scene.hpp  Scene.inl  SceneRenderer.cpp  SceneRenderer.hpp  component.hpp  entityQuery.hpp  system.hpp
engine/core/api/ECS/DefaultComponents/: particleEmitter.cpp  particleEmitter.hpp  sprite.cpp  sprite.hpp  spriteAnimator.cpp  spriteAnimator.hpp  tag.hpp  transform.cpp  transform.hpp
engine/core/api/ECS/DefaultSystems/: defaultSystems.cpp  defaultSystems.hpp  spriteAnimationSystem.cpp
engine/core/api/math/: Rect.hpp
engine/core/api/objects/: Camera.cpp  Camera.hpp
engine/core/engine/: Buffer.cpp  Buffer.hpp  Engine.cpp  Engine.hpp  GLAPI.cpp  GLAPI.hpp  GLState.cpp  GLState.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  SubTexture.cpp  SubTexture.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  Window.cpp  Window.hpp  inputState.cpp  inputState.hpp  layout.cpp  layout.hpp  meshes.hpp  projview.cpp  projview.hpp  time.cpp  time.hpp  transform.hpp
engine/core/engine/events/: Event.hpp  EventDispatcher.hpp  events.hpp  inputEvents.hpp  windowEvents.hpp
sandbox/: CMakeLists.txt  main.cpp
(+11 files in other folders)
